# OACC

./: .gitignore  CMakeLists.txt  Installation.md  LICENSE  README.md  Whitepaper.md
src/: config.hpp  oacc_example.cpp
